暂时屏蔽城市SKU动销

--- a/WebContent/crm/member_analysis_city.html
+++ b/WebContent/crm/member_analysis_city.html
@@ -126,7 +126,7 @@
               <ul class="clearfix">
                 <li class="col-sm-4 no-padding"><i class="glyphicon glyphicon-home"></i>安心合作社：<span id="eShopCount"></span></li>
                 <li class="col-sm-4 no-padding"><i class="glyphicon glyphicon-equalizer"></i>SKU总数：<span id="skuCount"></span></li>
-                <li class="col-sm-4 no-padding"><i class="fa fa-hourglass-half"></i>SKU动销：<span id="movingPinCount"></span></li>
+                <!--<li class="col-sm-4 no-padding"><i class="fa fa-hourglass-half"></i>SKU动销：<span id="movingPinCount"></span></li>-->
               </ul>
               <ul class="clearfix">
                 <li class="col-sm-4 no-padding"><i class="glyphicon glyphicon-yen"></i>GMV：<small>￥</small> <span id="cmEshopGmv"></span></li>
