成本控制优化

--- a/WebContent/cost_statistics/costStatistics_list.html
+++ b/WebContent/cost_statistics/costStatistics_list.html
@@ -268,7 +268,7 @@
 
 
 
-    $pmspage.opArr = [checkObj];
+    //$pmspage.opArr = [checkObj];
 </script>
 <body style="height: 100%">
 <div class="panel panel-primary">
